# sim-plugin-abaqus

./: CHANGELOG.md  LICENSE-NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-wheel.yml
fixtures/: abaqus_good.py  abaqus_inp_good.inp  abaqus_no_import.py  abaqus_no_step.inp  abaqus_syntax_error.py
src/sim_plugin_abaqus/: __init__.py  compatibility.yaml  driver.py
src/sim_plugin_abaqus/_skills/abaqus/: SKILL.md
src/sim_plugin_abaqus/_skills/abaqus/base/: known_issues.md
src/sim_plugin_abaqus/_skills/abaqus/base/reference/: abaqus_scripting.md  analysis_types.md  authoring_workflow.md  debug_reporting.md  doc_lookup.md  input_deck_reference.md
src/sim_plugin_abaqus/_skills/abaqus/base/snippets/: 01_cantilever_beam.inp
src/sim_plugin_abaqus/_skills/abaqus/base/workflows/cantilever/evidence/: README.md  e2e_summary.json
src/sim_plugin_abaqus/_skills/abaqus/base/workflows/cantilever/evidence/run/: view_results.py
src/sim_plugin_abaqus/_skills/abaqus/solver/2026/: notes.md
tests/: test_abaqus_driver.py  test_abaqus_e2e.py  test_protocol.py  test_wheel_contents.py
tests/execution/: abaqus_e2e_cantilever.inp  abaqus_e2e_cantilever_run.py
