[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim-plugin-abaqus"
version = "0.1.4"
description = "Dassault Systemes SIMULIA Abaqus driver for sim-cli, distributed as an out-of-tree plugin"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Weiqi Ji", email = "jiweiqi10@gmail.com" }]
keywords = ["abaqus", "cae", "fea", "simulation", "sim-cli", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
# Abaqus has no Python SDK imported into sim — scripts run in Abaqus's own
# embedded Python via subprocess. Only sim-cli-core is needed.
dependencies = [
    "sim-cli-core>=0.3",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "build>=1.0",
]

[project.entry-points."sim.drivers"]
abaqus = "sim_plugin_abaqus:AbaqusDriver"

[project.entry-points."sim.skills"]
abaqus = "sim_plugin_abaqus:skills_dir"

[project.entry-points."sim.plugins"]
abaqus = "sim_plugin_abaqus:plugin_info"

[project.urls]
Homepage = "https://github.com/svd-ai-lab/sim-plugin-abaqus"
Repository = "https://github.com/svd-ai-lab/sim-plugin-abaqus"
Issues = "https://github.com/svd-ai-lab/sim-plugin-abaqus/issues"
Changelog = "https://github.com/svd-ai-lab/sim-plugin-abaqus/blob/main/CHANGELOG.md"


[tool.hatch.build.targets.wheel]
packages = ["src/sim_plugin_abaqus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests that build wheels or touch external tooling",
]
